--- a/ME-GE.html
+++ b/ME-GE.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="ME-GE">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="ME-GE.html" data-home-page-title="ME-GE" class="u-body"><header class="u-clearfix u-gradient u-header u-sticky u-sticky-fdff u-header" id="sec-9e98"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-gradient u-header u-sticky u-sticky-fdff u-header" id="sec-9e98"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="ME-GE.html#sec-9775" data-page-id="486329298" class="u-image u-logo u-image-1" data-image-width="1920" data-image-height="1080" title="ME.GE">
           <img src="images/ME1.png" class="u-logo-image u-logo-image-1">
         </a>
